<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.citrus.aboutcitrus.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <android.support.v7.widget.CardView
            android:id="@+id/aboutcitrus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin">

                <TextView
                    android:id="@+id/aboutcitrus_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="fill_horizontal"
                    android:layout_margin="@dimen/cards_text_margin"
                    android:text="@string/about_citrus"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/aboutcitrus_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/aboutcitrus_text"
                    android:layout_margin="@dimen/cards_text_margin"
                    android:text="@string/about_citrus2"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_small" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/aboutcitrus2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin">

                <TextView
                    android:id="@+id/aboutcitrus_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/cards_text_margin"
                    android:text="@string/about_citrus3"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_small" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/tools"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/cardView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchAdarshmr"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/toolbar_elevation"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:id="@+id/bgimage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/adarshmrbg"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:id="@+id/cardFrame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.citrus.aboutcitrus.RoundedImageView
                            android:id="@+id/cardimage"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="fitXY"
                            android:src="@drawable/adarshmr"
                            app:riv_border_color="#FFFFFF"
                            app:riv_border_width="4dp"
                            app:riv_oval="true"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/cardtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/content_inset_half"
                            android:fontFamily="sans-serif"
                            android:paddingLeft="@dimen/content_inset"
                            android:paddingRight="@dimen/content_inset"
                            android:text="@string/adarshmr"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="@dimen/header_text_size" />

                        <TextView
                            android:id="@+id/carddescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center_horizontal"
                            android:lineSpacingMultiplier="1.1"
                            android:paddingLeft="@dimen/content_inset"
                            android:paddingRight="@dimen/content_inset"
                            android:text="@string/founder"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="@dimen/content_text_size" />

                    </LinearLayout>

                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/tools"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/cardView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchRohit"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/toolbar_elevation"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:id="@+id/bgimage2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/rohitbg"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:id="@+id/cardFrame2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.citrus.aboutcitrus.RoundedImageView
                            android:id="@+id/cardimage2"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="fitXY"
                            android:src="@drawable/rohit"
                            app:riv_border_color="#FFFFFF"
                            app:riv_border_width="4dp"
                            app:riv_oval="true"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/cardtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/content_inset_half"
                            android:fontFamily="sans-serif"
                            android:paddingLeft="@dimen/content_inset"
                            android:paddingRight="@dimen/content_inset"
                            android:text="@string/rohit"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="@dimen/header_text_size" />

                        <TextView
                            android:id="@+id/carddescription2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center_horizontal"
                            android:lineSpacingMultiplier="1.1"
                            android:paddingLeft="@dimen/content_inset"
                            android:paddingRight="@dimen/content_inset"
                            android:text="@string/co-founder"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="@dimen/content_text_size" />

                    </LinearLayout>

                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
